--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,26 +1,64 @@
 <!-- app/templates/macros.html -->
 {% macro render_form(form, route, button_label) %}
 <form action="{{ url_for(route) }}" method="POST" enctype="multipart/form-data">
-  {{ form.hidden_tag() }} {% for field in form if field.type != "SubmitField" %}
-  <div class="form-group">
-    <label for="{{ field.id }}">{{ field.label.text }}</label>
-    {% if field.type == "MultiCheckboxField" %}
-    <!-- Special handling for MultiCheckboxField -->
-    {% for subfield in field %}
-    <div class="form-check">
-      {{ subfield(class="form-check-input") }}
-      <label class="form-check-label" for="{{ subfield.id }}"
-        >{{ subfield.label.text }}</label
-      >
+  <div class="container">
+    {{ form.hidden_tag() }} {% for field in form if field.type != "SubmitField"
+    and field.name != 'csrf_token' %} {% if field.name == 'skills' %}
+    <!-- Special layout for 'skills' -->
+    <div class="form-group row">
+      <div class="col-sm-12">
+        <label for="{{ field.id }}" class="form-label"
+          >{{ field.label.text }}</label
+        >
+      </div>
     </div>
-    {% endfor %} {% else %} {{ field(class="form-control") }} {% endif %} {% if
-    field.errors %}
-    <p class="error">{{ field.errors[0] }}</p>
-    {% endif %}
-  </div>
-  {% endfor %}
-  <div class="form-group">
-    <input type="submit" value="{{ button_label }}" class="btn btn-primary" />
+    <div class="form-group row">
+      <div class="col-sm-12">
+        <div class="d-flex flex-wrap">
+          {% for subfield in field %}
+          <div class="p-2 flex-fill">
+            <input
+              type="checkbox"
+              class="btn-check"
+              name="{{ subfield.name }}"
+              id="{{ subfield.id }}"
+              autocomplete="off"
+            />
+            <label class="btn btn-primary w-100 mb-2" for="{{ subfield.id }}"
+              >{{ subfield.label.text }}</label
+            >
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% else %}
+    <!-- Default layout for other fields -->
+    <div class="form-group row">
+      <label for="{{ field.id }}" class="col-sm-2 col-form-label"
+        >{{ field.label.text }}</label
+      >
+      <div class="col-sm-10">
+        {{ field(class="form-control") }} {% if field.errors %}
+        <div class="errors">
+          {% for error in field.errors %}
+          <p class="error">{{ error }}</p>
+          {% endfor %}
+        </div>
+        {% endif %}
+      </div>
+    </div>
+    {% endif %} {% endfor %}
+    <!-- Submit button -->
+    <div class="form-group row">
+      <div class="col-sm-12">
+        <input
+          type="submit"
+          value="{{ button_label }}"
+          class="btn btn-primary w-100"
+        />
+      </div>
+    </div>
   </div>
 </form>
 {% endmacro %}
