--- a/app/templates/resume/edu.html
+++ b/app/templates/resume/edu.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   {% for edu in educations %}
-  <div class="card mb-4 bg-secondary">
+  <div class="card mb-4 border-success bg-secondary">
     <!-- Card Header -->
     <div class="card-header">
       <div class="row">
