--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
     <!-- Fonts -->
     {% include 'default/fonts.html' %} {% block css %}{% endblock %}
   </head>
-  <body class="{{ body_class|default('text-dark') }}">
+  <body class="{{ body_class|default('text-light') }}">
     <div class="container-fluid">
       <header class="container d-flex flex-column">
         {% include 'default/nav/main.html' %}
