--- a/app/static/styles/skills.css
+++ b/app/static/styles/skills.css
@@ -121,3 +121,16 @@
   transform: translate(-50%, -50%) rotate(330deg) translate(300px)
     rotate(-330deg);
 }
+
+#background-video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1000;
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+}
