--- a/app/templates/skills/main.html
+++ b/app/templates/skills/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block css %}
 <link
   rel="stylesheet"
-  href="{{ url_for('static', filename='styles/skills.css') }}"
+  href="{{ url_for('static', filename='styles/skills.css', v='1.1') }}"
 />
 {% endblock %} {% block content %}
 
