--- a/app/templates/default/footer.html
+++ b/app/templates/default/footer.html
@@ -1,64 +1,53 @@
 <!-- ./app/templates/default/footer.html -->
-<footer class="mt-3 py-2 bg-dark text-white">
-  <div class="container">
-    <div class="row">
-      <!-- About Section -->
-      <section class="col-md-4 mb-4">
-        <h5 class="text-uppercase fw-bold">About</h5>
-        <p class="text-muted">Having fun making a digital resume... thing...</p>
-      </section>
-      <!-- Quick Links -->
-      <nav class="col-md-4 mb-4 text-center">
-        <h5 class="text-uppercase fw-bold">Quick Links</h5>
-        <ul class="list-unstyled">
-          <li>
-            <a href="#" class="text-white text-decoration-none">
-              To Top <i class="fas fa-arrow-up"></i>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <!-- Contact -->
-      <address class="col-md-4 mb-4">
-        <h5 class="text-uppercase fw-bold">Contact</h5>
-        <ul class="list-unstyled">
-          <li>
-            <span class="info-label"
-              ><i class="fas fa-envelope"></i> Email:</span
-            >
-            <a href="mailto:{{ _('contact_email') }}"
-              >{{ _('contact_email') }}</a
-            >
-          </li>
-          <li>
-            <span class="info-label"
-              ><i class="fas fa-globe"></i> Website:</span
-            >
-            <a href="{{ _('contact_website') }}">{{ _('contact_website') }}</a>
-          </li>
-          <li>
-            <span class="info-label"
-              ><i class="fab fa-github"></i> GitHub:</span
-            >
-            <a href="{{ _('contact_github') }}">{{ _('contact_github') }}</a>
-          </li>
-          <li>
-            <span class="info-label"
-              ><i class="fab fa-linkedin"></i> LinkedIn:</span
-            >
-            <a href="{{ _('contact_linkedin') }}"
-              >{{ _('contact_linkedin') }}</a
-            >
-          </li>
-        </ul>
-      </address>
-    </div>
-    <!-- Footer Bottom -->
-    <div class="row">
-      <div class="col text-center">
-        <p class="mb-0">&copy; self.__name__</p>
-        <p class="fs-6 fst-italic text-muted">This has been hilarious</p>
-      </div>
+
+<div class="container mt-3">
+  <div class="row">
+    <!-- About Section -->
+    <section class="col-md-4 mb-4">
+      <h5 class="text-uppercase fw-bold">About</h5>
+      <p class="text-muted">Having fun making a digital resume... thing...</p>
+    </section>
+    <!-- Quick Links -->
+    <nav class="col-md-4 mb-4 text-center">
+      <h5 class="text-uppercase fw-bold">Quick Links</h5>
+      <ul class="list-unstyled">
+        <li>
+          <a href="#" class="text-white text-decoration-none">
+            To Top <i class="fas fa-arrow-up"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- Contact -->
+    <address class="col-md-4 mb-4">
+      <h5 class="text-uppercase fw-bold">Contact</h5>
+      <ul class="list-unstyled">
+        <li>
+          <span class="info-label"><i class="fas fa-envelope"></i> Email:</span>
+          <a href="mailto:{{ _('contact_email') }}">{{ _('contact_email') }}</a>
+        </li>
+        <li>
+          <span class="info-label"><i class="fas fa-globe"></i> Website:</span>
+          <a href="{{ _('contact_website') }}">{{ _('contact_website') }}</a>
+        </li>
+        <li>
+          <span class="info-label"><i class="fab fa-github"></i> GitHub:</span>
+          <a href="{{ _('contact_github') }}">{{ _('contact_github') }}</a>
+        </li>
+        <li>
+          <span class="info-label"
+            ><i class="fab fa-linkedin"></i> LinkedIn:</span
+          >
+          <a href="{{ _('contact_linkedin') }}">{{ _('contact_linkedin') }}</a>
+        </li>
+      </ul>
+    </address>
+  </div>
+  <!-- Footer Bottom -->
+  <div class="row">
+    <div class="col text-center">
+      <p class="mb-0">&copy; self.__name__</p>
+      <p class="fs-6 fst-italic text-muted">This has been hilarious</p>
     </div>
   </div>
-</footer>
+</div>
