--- a/app/templates/resume/exp.html
+++ b/app/templates/resume/exp.html
@@ -1,35 +1,85 @@
 <!-- ./app/templates/resume/exp.html -->
 
-{% for experience in experiences %}
-<div class="card mb-3">
-  <h3 class="card-header">
-    {{ experience.position }} @ {{ experience.company }}
-  </h3>
-  <div class="card-body">
-    <h5 class="card-title">{{ experience.experience_type }} {{ experience.name }}</h5>
-    <h6 class="card-subtitle text-muted">{{ experience.location }}</h6>
+<div class="container mt-4">
+  {% for experience in experiences %}
+  <div class="card mb-3">
+    <!-- Card Header -->
+    <h3 class="card-header">
+      {{ experience.position }} @ {{ experience.company }}
+    </h3>
+
+    <!-- Card Body -->
+    <div class="card-body">
+      <!-- Experience Description -->
+      <div class="row mb-3">
+        <div class="col-md-12">
+          <h5 class="card-title">
+            {{ experience.experience_type }} {{ experience.name }}
+          </h5>
+          <h6 class="card-subtitle text-muted">{{ experience.location }}</h6>
+          <p class="card-text">{{ experience.description }}</p>
+        </div>
+      </div>
+
+      <!-- Images -->
+      <div class="row">
+        <!-- Using Bootstrap's col-3 to ensure each image takes up 25% of the row -->
+        <div class="col-3 d-flex align-items-center justify-content-center">
+          <div class="square">
+            {% if experience.image_filename %}
+            <img
+              src="{{ url_for('static', filename='images/experiences/' + experience.image_filename) }}"
+              alt="{{ experience.company }} Image 1"
+              class="img-fluid"
+            />
+            {% endif %}
+          </div>
+        </div>
+
+        <div class="col-3 d-flex align-items-center justify-content-center">
+          <div class="square">
+            {% if experience.image_filename_two %}
+            <img
+              src="{{ url_for('static', filename='images/experiences/' + experience.image_filename_two) }}"
+              alt="{{ experience.company }} Image 2"
+              class="img-fluid"
+            />
+            {% endif %}
+          </div>
+        </div>
+
+        <div class="col-3 d-flex align-items-center justify-content-center">
+          <div class="square">
+            {% if experience.image_filename_three %}
+            <img
+              src="{{ url_for('static', filename='images/experiences/' + experience.image_filename_three) }}"
+              alt="{{ experience.company }} Image 3"
+              class="img-fluid"
+            />
+            {% endif %}
+          </div>
+        </div>
+
+        <div class="col-3 d-flex align-items-center justify-content-center">
+          <div class="square">
+            {% if experience.image_filename_four %}
+            <img
+              src="{{ url_for('static', filename='images/experiences/' + experience.image_filename_four) }}"
+              alt="{{ experience.company }} Image 4"
+              class="img-fluid"
+            />
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card Footer -->
+    <div class="card-footer text-muted">
+      {{ experience.start_date.strftime('%b %Y') }} - {% if experience.end_date
+      %} {{ experience.end_date.strftime('%b %Y') }} {% else %} Present {% endif
+      %}
+    </div>
   </div>
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    class="d-block user-select-none"
-    width="100%"
-    height="200"
-    aria-label="Placeholder: Image cap"
-    focusable="false"
-    role="img"
-    preserveAspectRatio="xMidYMid slice"
-    viewBox="0 0 318 180"
-    style="font-size: 1.125rem; text-anchor: middle"
-  >
-    <rect width="100%" height="100%" fill="#868e96"></rect>
-    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Placeholder Image</text>
-  </svg>
-  <div class="card-body">
-    <p class="card-text">{{ experience.description }}</p>
-  </div>
-  <div class="card-footer text-muted">
-    {{ experience.start_date.strftime('%b %Y') }} - {% if experience.end_date %}
-    {{ experience.end_date.strftime('%b %Y') }} {% else %} Present {% endif %}
-  </div>
+  {% endfor %}
 </div>
-{% endfor %}
