template folder restructure

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% from "macros.html" import render_form %} {% block
+{% extends "base.html" %} {% from "utils/macros.html" import render_form %} {% block
 title %} Account - ZDP {% endblock %} {% block content %}
 <section class="row">
   <article class="col-md-6">
