--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
         {% include 'default/spacer.html' %}
       </div>
 
-      <div class="container d-flex flex-column">{% include 'flash.html' %}</div>
+      <div class="container d-flex flex-column">{% include 'utils/flash.html' %}</div>
 
       <main class="container d-flex flex-column">
         {% block content %} {% include 'default/construction.html' %} {%
