--- a/app/templates/interface.html
+++ b/app/templates/interface.html
@@ -1,5 +1,5 @@
 <!-- app/templates/interface.html -->
-{% extends "base.html" %} {% from "macros.html" import render_form %} {% block
+{% extends "base.html" %} {% from "utils/macros.html" import render_form %} {% block
 title %}Interface{% endblock %} {% block content %}
 
 <h1>Upload CV</h1>
