--- a/app/templates/utils/macros.html
+++ b/app/templates/utils/macros.html
@@ -1,4 +1,4 @@
-<!-- app/templates/macros.html -->
+<!-- app/templates/utils/macros.html -->
 {% macro render_form(form, route, button_label) %}
 <form action="{{ url_for(route) }}" method="POST" enctype="multipart/form-data">
   <div class="container">
