--- a/app/templates/caro/filter.html
+++ b/app/templates/caro/filter.html
@@ -1,3 +1,3 @@
 <!-- Filter Section -->
-{% from "macros.html" import render_form %} {{ render_form(form,
+{% from "utils/macros.html" import render_form %} {{ render_form(form,
 'main_routes.projects', 'Filter') }}
