--- a/app/templates/default/404.html
+++ b/app/templates/default/404.html
@@ -1,4 +1,4 @@
-<!-- app/templates/404.html -->
+<!-- app/templates/default/404.html -->
 {% extends "base.html" %}
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
