--- a/app/static/styles/cv.css
+++ b/app/static/styles/cv.css
@@ -1,10 +1,28 @@
 @font-face {
   font-family: "Orbitron";
-  src: url('/static/fonts/Orbitron/static/Orbitron-Black.ttf') format('truetype');
+  src: url("/static/fonts/Orbitron/static/Orbitron-Black.ttf")
+    format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
   font-family: "Orbitron", sans-serif;
+}
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+  display: none;
+  visibility: visible;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  left: 100%;
+}
+
+.dropdown-submenu:hover .dropdown-menu {
+  display: block;
 }
