--- a/app/templates/default/signin.html
+++ b/app/templates/default/signin.html
@@ -1,4 +1,4 @@
-<!-- app/templates/signin.html -->
+<!-- app/templates/default/signin.html -->
 {% extends "base.html" %} {% block content %}
 <h2>Sign In</h2>
 <form method="POST" action="{{ url_for('auth_routes.signin') }}">
