image gen and structure

--- a/app/templates/blog/cnn.html
+++ b/app/templates/blog/cnn.html
@@ -1,7 +1,7 @@
 <h1>Summary of "ImageNet Classification with Deep Convolutional Neural Networks"</h1>
 
 <div role="region" aria-label="ImageNet Classification image">
-    <img src="../../static/images/cnn.png" alt="ImageNet Classification" width="100%" />
+    <img src="../../static/images/blogs/cnn.png" alt="ImageNet Classification" width="100%" />
 </div>
 <p>
     This blog post provides a detailed summary of the seminal paper, "ImageNet Classification with Deep Convolutional
