--- a/app/templates/skills/main.html
+++ b/app/templates/skills/main.html
@@ -12,7 +12,7 @@
 <div class="mt-5 mb-5 skill-circle-container">
   <!-- Central User Image -->
   <img
-    src="{{ url_for('static', filename='images/chris.png') }}"
+    src="{{ url_for('static', filename='images/defaults/avatars/0004-chris.png') }}"
     alt="User"
     class="center-user-img"
   />
