--- a/app/templates/default/construction.html
+++ b/app/templates/default/construction.html
@@ -1,7 +1,7 @@
 <div class="container text-center my-5">
   <h1 class="display-4">Under Construction</h1>
   <img
-    src="{{ url_for('static', filename='images/construction.png') }}"
+    src="{{ url_for('static', filename='images/defaults/construction.png') }}"
     class="img-fluid"
     alt="Under Construction"
   />
