template struct changes

--- a/app/templates/default/signup.html
+++ b/app/templates/default/signup.html
@@ -1,4 +1,4 @@
-<!-- app/templates/signup.html -->
+<!-- app/templates/default/signup.html -->
 {% extends "base.html" %} {% block content %}
 <h2>Sign Up</h2>
 <form method="POST">
