--- a/app/templates/utils/macros.html
+++ b/app/templates/utils/macros.html
@@ -1,6 +1,6 @@
 <!-- app/templates/utils/macros.html -->
-{% macro render_form(form, route, button_label) %}
-<form action="{{ url_for(route) }}" method="POST" enctype="multipart/form-data">
+{% macro render_form(form, route, button_label, kwargs={}) %}
+<form action="{{ url_for(route, **kwargs) }}" method="POST" enctype="multipart/form-data">
   <div class="container">
     {{ form.hidden_tag() }} {% for field in form if field.type != "SubmitField"
     and field.name != 'csrf_token' %} {% if field.name in ['skills', 'related_skills'] %}
@@ -62,7 +62,6 @@
   </div>
 </form>
 {% endmacro %}
-
 
 {% macro render_video(filename, aria_label="video", autoplay=true, loop=true, muted=true, width="100%") %}
 <div role="region" aria-label="{{ aria_label }}">
