nav change due to project

--- a/app/templates/default/nav/links/center.html
+++ b/app/templates/default/nav/links/center.html
@@ -12,7 +12,7 @@
     </a>
     <ul class="dropdown-menu" aria-labelledby="projectDropdown">
       <li>
-        <a class="dropdown-item" href="{{ url_for('main_routes.projects') }}"
+        <a class="dropdown-item" href="{{ url_for('project_routes.projects') }}"
           >All</a
         >
       </li>
