--- a/app/templates/default/nav/links/left.html
+++ b/app/templates/default/nav/links/left.html
@@ -3,7 +3,7 @@
   <a class="nav-link" href="{{ url_for('main_routes.index') }}">
     <i class="fas fa-home"></i> Home
   </a>
-  <a class="nav-link" href="{{ url_for('main_routes.projects') }}">
+  <a class="nav-link" href="{{ url_for('project_routes.projects') }}">
     <i class="fas fa-search"></i> Search
   </a>
   <a class="nav-link" href="{{ url_for('main_routes.about') }}">
