--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     {% if config['USE_EXTENDED_BOOTSTRAP'] == 'True' %}
     <link
-      href="https://cdn.jsdelivr.net/npm/bootswatch@5/dist/vapor/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5/dist/{{ _('extension_name') }}/bootstrap.min.css"
       rel="stylesheet"
     />
     {% else %}
