--- a/app/templates/default/nav/links/center.html
+++ b/app/templates/default/nav/links/center.html
@@ -49,7 +49,7 @@
     </a>
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
       <li>
-        <a class="dropdown-item" href="{{ url_for('main_routes.blogs') }}"
+        <a class="dropdown-item" href="{{ url_for('blog_routes.blogs') }}"
           >All</a
         >
       </li>
